Add me endpoint to retrieve user (#28)
